--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*King Cristopher E. Yuzon*/
 /* Default styling */
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -34,10 +35,7 @@ table {
     padding: 10px;
 }
 
-.SCHED {    /*for responsiveness of the table*/
-    
-    width: 100%;
-}
+
 
 table,
 th,
